Added Code for using last n frames' heatmap Updated writeup ipython and README markdown files Recorded new videos with the code changes and new threshold

--- a/Writeup.ipynb
+++ b/Writeup.ipynb
@@ -40,7 +40,9 @@
     "    * Create Multi Scale Windows\n",
     "    * Search for cars in the input image using the multi scale windows\n",
     "    * Create the prediction vector and heatmap using search output\n",
-    "    * Create the Labels and labeled bounding boxes\n",
+    "    * Use the history of heatmaps to make one consolidated heatmap\n",
+    "    * Threshold the consolidated heatmap to create labels\n",
+    "    * Draw the label bounding boxes\n",
     "    * Returning the Annotated image\n",
     "    \n",
     "* A LinearSVC from sklearn has been used. The tuning table of the C parameter is provided in later sections"
@@ -99,7 +101,18 @@
     "\n",
     "#### 5.1 Creating multi scale windows for searching\n",
     "This class creates various multi scale windows and initializes its own windows attribute. This attributes value will be used to search for incoming frames.\n",
-    "Examples of search windows are provided below\n",
+    "\n",
+    "##### 5.1.1 Sliding windows\n",
+    "The Sliding window algorithm describes the approach of searching through an input image by dividing it into sub regions called ROIs (Regions of Image/Interest) and searching through them. The approach is specifically suited for multi scale object detection.\n",
+    "Sliding window detectors find objects in the following steps: \n",
+    "* inspect every window\n",
+    "* extract features in window\n",
+    "* classify & accept window if positive\n",
+    "* optional: A classifier score threshold can also be applied to only take in high confidence classifications\n",
+    "\n",
+    "##### 5.1.2 Sliding windows in this project\n",
+    "The underlying assumption is that objects(vehicle) that are close and relevant will be spread in a wider area and occupy a larger region of the image while objects that are further away will be smaller in size and be spread over a narrower region as a possibility.\n",
+    "Three combinations were chosen empirically to account for the assumption described above. A Visual representation of the sliding windows is described above.\n",
     "\n",
     "![Windows_1](./writeup_helpers/search_windows1.png \"192\")\n",
     "![Windows 2](./writeup_helpers/search_windows2.png \"128\")\n",
@@ -123,7 +136,11 @@
     "#### 5.3 Creating and thresholding the Heatmap\n",
     "The Heatmap was created by incrementing all the pixel values in positive detection windows.\n",
     "![Heatmap](./writeup_helpers/heatmap.png \"Heatmap\")\n",
-    "Threshold was empirically tuned to a value of 2 to remove false positives."
+    "Threshold was empirically tuned to a value of 2 to remove false positives.\n",
+    "\n",
+    "** Smoothing filter for tracking **\n",
+    "An Aggregation of the last 6 heatmaps is taken and the threshold is applied to this aggregation. The underlying assumption is that False positives will be sporadic in nature while the Relative positions of vehicles on the road with respect to the camera will not move by a lot and will reinforce the heatmaps by subsequent positive detections.\n",
+    "The number of frames and the threshold value are determined empirically"
    ]
   },
   {
